--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "main": "App.js",
+  "main": "Atm-project.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1",
+    "http-server": "^14.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
